Fix contrast error for accessibility

--- a/src/scss/ErrorPage.scss
+++ b/src/scss/ErrorPage.scss
@@ -19,12 +19,12 @@ h2 {
 }
 
 .error-link{
-  color: #942700;
+  color: #b73203;
   padding: .5em;
   border-radius: 7px;
   font-size: 1.5em;
 
   &:hover {
-    border: 1px solid #942700;
+    border: 1px solid #b73203;
   }
 }
